cabal-version: 2.4

name:                   hw-time
version:                0.1.0.0
description:            Time library
description:            Please see the README on Github at <https://github.com/newhoggy/hw-time#readme>
homepage:               https://github.com/newhoggy/hw-time#readme
bug-reports:            https://github.com/newhoggy/hw-time/issues
author:                 John Ky
maintainer:             newhoggy@gmail.com
copyright:              2016-2019 John Ky
license:                BSD-3-Clause
license-file:           LICENSE
build-type:             Simple
category:               Data
extra-source-files:     README.md
                        ChangeLog.md

source-repository head
  type: git
  location: https://github.com/newhoggy/hw-time

common base                 { build-depends: base                 >= 4          && < 5      }

common config
  default-language:     Haskell2010

common hw-time
  build-depends:        hw-time

library
  import:               base, config
  exposed-modules:      Lib
  other-modules:        Paths_hw_time
  autogen-modules:      Paths_hw_time
  hs-source-dirs:       src

executable hw-time-exe
  import:               base, config
                      , hw-time
  main-is:              Main.hs
  hs-source-dirs:       app
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N

test-suite hw-time-test
  import:               base, config
                      , hw-time
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  hs-source-dirs:       test
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
